-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Catalog and Routing
-
Fully Compatible
-
ALL
-
CAR Team 2026-06-22
-
200
-
🟥 DDL
-
None
-
None
-
None
-
None
-
None
-
None
The MoveRangeCoordinator onComplete section captures any error and stores it in _doc. However, if _doc has not been created yet, this path hits tassert(10644540).
This can happen when the insertion of _doc fails at the beginning of the coordinator's first phase, Phase::kMigrate.