SERVER-129342 MoveRangeCoordinator cannot update _doc when it has not been created yet (#56283)

GitOrigin-RevId: 14470dda009e727e2a4ed5d419a5ddff0ec97921