src/mongo/db/s/move_range_coordinator.cpp
@@ -207,6 +207,14 @@ ExecutorFuture<void> MoveRangeCoordinator::_runImpl(
         .onCompletion([this, anchor = shared_from_this()](Status migrateStatus) {
             auto opCtx = makeOperationContext(/*deprioritizable=*/false);
             if (!migrateStatus.isOK()) {
+                // If the state document was never persisted (e.g. the coordinator was
+                // interrupted before the first phase write committed), there is nothing on disk to
+                // record the result into. Propagate the (retryable) failure directly; attempting to
+                // update a non-existent document would hit the tripwire 10644540.
+                if (_doc.getPhase() == Phase::kUnset) {
+                    uassertStatusOK(migrateStatus);
+                }
+
                 // OrphanedRangeCleanUpFailed is only thrown if the migration succeeded, but
                 // _waitForDelete was requested and we failed to delete all orphans (e.g. because we
                 // were interrupted before the range deletion could complete). Arguably, we should
